first working version of freepbx 14 with asterisk 14

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "8080:80"
       - "3306:3306"
+    network_mode: bridge
   # mysql:
   #   image: "mysql:5.7"
   #   environment:
