--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     image: flaviostutz/freepbx:14.0
     network_mode: host
+    restart: always
     volumes:
       - freepbx-backup:/backup
       - freepbx-recordings:/var/spool/asterisk/monitor
