--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,34 +9,24 @@ services:
       - 8080:80
       - 5060:5060/udp
       - 5160:5160/udp
-      - 18000-18100:18000-18100/udp      
+      - 3306:3306
+      - 18000-18100:18000-18100/udp
     # network_mode: host
     restart: always
-    # volumes:
-    #   - freepbx-backup:/backup
-    #   - freepbx-recordings:/var/spool/asterisk/monitor
-    # environment:
-    #   - DB_HOST=mariadb
-    #   - DB_PORT=3306
-    #   - DB_USER=freepbx
-    #   - DB_PASS=freepbx123    
-    #for fail2ban to work
-    cap_add:
-      - NET_ADMIN
-    privileged: true
-    # command: sleep 9999
-
-  # mariadb:
-  #   image: mariadb:10.5.1
-  #   restart: always
-  #   #    volumes:
-  #   #  - ./volumes/db:/var/lib/mysql
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=freepbx123
-  #     - MYSQL_DATABASE=freepbx
-  #     - MYSQL_USER=freepbx
-  #     - MYSQL_PASSWORD=freepbx123
+    environment:
+      - MARIADB_REMOTE_ROOT_PASSWORD=admin123
+      - ADMIN_PASSWORD=admin123
+      - DISABLE_SIGNATURE_CHECK=true
+    volumes:
+      - backup:/backup
+      - recordings:/var/spool/asterisk/monitor
   
-# volumes:
-#   freepbx-backup:
-#   freepbx-recordings:
+  adminer:
+    image: adminer:4.7.6
+    restart: always
+    ports:
+      - "9292:8080"
+    
+volumes:
+  backup:
+  recordings:
