adding fail2ban support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,17 @@ services:
       - 3306:3306
       - 18000-18100:18000-18100/udp
     # network_mode: host
+    privileged: true
     restart: always
     environment:
       - MARIADB_REMOTE_ROOT_PASSWORD=admin123
       - ADMIN_PASSWORD=admin123
       - DISABLE_SIGNATURE_CHECK=true
       - USE_CHAN_SIP=true
+      - FAIL2BAN_ENABLE=true
+      - FAIL2BAN_FINDTIME=30
+      - FAIL2BAN_MAXRETRY=10
+      - FAIL2BAN_BANTIME=10
     volumes:
       - backup:/backup
       - recordings:/var/spool/asterisk/monitor
